filter serach cut off issue fixed

--- a/apps/home/static/home/css/home-page.css
+++ b/apps/home/static/home/css/home-page.css
@@ -684,7 +684,7 @@ header.sticky{
 .filter-devider{
     background: #fff;
     height: 3px;
-    width: 100%;
+    width: 91%;
     margin: 0px 15px;
     margin-bottom: 20px;
 }
